--- a/index.html
+++ b/index.html
@@ -9,10 +9,10 @@
   </head>
   <body>
     <div class="top-container">
-      <img class="top-cloud" src="images/cloud4.png" alt="cloud-img">
+      <img class="top-cloud" src="images/cloud4.PNG" alt="cloud-img">
       <h1>I'm Hasan</h1>
       <h2 class="desc">a computer science student.</h2>
-      <img class="bottom-cloud" src="images/cloud2.png" alt="cloud-img">
+      <img class="bottom-cloud" src="images/cloud2.PNG" alt="cloud-img">
       <img class="mountain" src="images/mountains8.png" alt="mountain-img">
 
     </div>
